force-app/main/default/objects/Answer__c/fields/MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSegment__c</fullName>
    <formula>CASE(QuestionnaireResponse__r.MarketSegment__c,
&apos;00001&apos;, &apos;Americas&apos;,
&apos;00002&apos;, &apos;MENA&apos;,
&apos;00004&apos;, &apos;Europe&apos;, 
&apos;00006&apos;, &apos;KLW&apos;,
&apos;00010&apos;, &apos;CIS&apos;,
&apos;00011&apos;, &apos;Ukraine&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>