force-app/main/default/objects/Answer__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <formula>QuestionnaireResponse__r.Questionnaire__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire</label>
    <type>Text</type>
</CustomField>