force-app/main/default/objects/Answer__c/fields/QuestionnaireResponse__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Response</label>
    <referenceTo>Questionnaire_Response__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>