force-app/main/default/objects/Answer__c/fields/Respondent__c.field-meta.xml
<CustomField>
    <fullName>Respondent__c</fullName>
    <formula>QuestionnaireResponse__r.Respondent__r.FirstName + &apos; &apos; + QuestionnaireResponse__r.Respondent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Respondent</label>
    <type>Text</type>
</CustomField>